Bug/160 support ts precision (#161)
* update PK, prepare next release

* add ExasolVersion parsing

* pass down ExaMetadata everywhere

* update versions

* add javadoc

* improve regexp

* use find to avoid backtracking

* rename

* update changelog

* Apply suggestions from code review

Co-authored-by: Christoph Pirkl <4711730+kaklakariada@users.noreply.github.com>

* set final for adapter and functions

* add ability to use stub with database version

* refactor tests with suggestions

* clean

* target release to 13.0.0

---------

Co-authored-by: Christoph Pirkl <4711730+kaklakariada@users.noreply.github.com>